--- a/01.Cutadapt.Rmd
+++ b/01.Cutadapt.Rmd
@@ -36,18 +36,10 @@ primerHits <- function(primer, fn) {
 ```
 
 ```{r}
-In_path <- "../FASTQ/Project00"
-out_path <- "~/ksy/project/Project00/Cutadapt"
-FWD <- "AGAGTTTGATCCTGGCTCAG" # 8F
-REV <- "ATTACCGCGGCTGCTGG"    # 534R
-FWD.orients <- allOrients(FWD)
-REV.orients <- allOrients(REV)
-cutadapt <- "/home/ksy/cutadapt-venv/bin/cutadapt" 
-QC = 20
 
-system2(cutadapt, args = "--version") # Run shell commands from R
 
-Cutadapt <- function(In_path, out_path, FWD, REV, QC = 20) {
+
+Cutadapt <- function(In_path, out_path, FWD, REV, QC = 20, cutadapt) {
   dir.create("../cutadapt/") 
   # import data
   fnFs <- sort(list.files(path, pattern="_1.fastq", full.names = TRUE))
@@ -60,7 +52,9 @@ Cutadapt <- function(In_path, out_path, FWD, REV, QC = 20) {
         FWD.ReverseReads = sapply(FWD.orients, primerHits, fn = fnRs[[1]]),
         REV.ForwardReads = sapply(REV.orients, primerHits, fn = fnFs[[1]]),
         REV.ReverseReads = sapply(REV.orients, primerHits, fn = fnRs[[1]]))
-
+  
+  FWD.orients <- allOrients(FWD)
+  REV.orients <- allOrients(REV)
   FWD.RC <- dada2:::rc(FWD)
   REV.RC <- dada2:::rc(REV)
   # Trim FWD and the reverse-complement of REV off of R1 (forward reads)
@@ -71,16 +65,19 @@ Cutadapt <- function(In_path, out_path, FWD, REV, QC = 20) {
   fnFs.cut <- file.path(out_path, paste0("QC",QC), basename(fnFs))
   fnRs.cut <- file.path(out_path, paste0("QC",QC), basename(fnRs))
   
+  system2(cutadapt, args = "--version") # Run shell commands from R
   system2("echo", args = paste0(" '' > ../Cutadapt/QC",QC, "/Cutadapt_output.txt"))
   
   for(i in seq_along(fnFs)) {
-  system2(cutadapt, args = c(R1.flags, R2.flags, "-n", 2, # -n 2 required to remove FWD and REV from reads
-                             "-o", fnFs.cut[i], "-p", fnRs.cut[i], # output files
-                             "-Q", QC, "-q",  20, "--minimum-length 20 --discard-untrimmed",
-                             fnFs[i], fnRs[i],
-                             paste0(">> ../Cutadapt/QC",QC, "/Cutadapt_output.txt") 
-                             )
-  }
+    system2(cutadapt, 
+            args = c(R1.flags, R2.flags, "-n", 2, # -n 2 required to remove FWD and REV from reads
+                     "-o", fnFs.cut[i], "-p", fnRs.cut[i], # output files
+                     "-Q", QC, "-q", QC, "--minimum-length 20 --discard-untrimmed",
+                     fnFs[i], fnRs[i],
+                     paste0(">> ../Cutadapt/QC",QC, "/Cutadapt_output.txt"))
+    )
+    }
+  
   pass <- system(paste0("grep 'passing filters' ../Cutadapt/QC", QC, "/Cutadapt_output.txt | cut -f3 -d '(' | tr -d ')'"), intern = TRUE)
   filt <- system(paste0("grep 'filtered' ../Cutadapt/QC",QC, "/Cutadapt_output.txt | cut -f3 -d '(' | tr -d ')'"), intern = TRUE)
   output_summary <- data.frame(`name` = sample.names, `passing filters` = pass, `filtered` = filt)
@@ -99,6 +96,18 @@ Cutadapt <- function(In_path, out_path, FWD, REV, QC = 20) {
 
 
 ```
+
+```{r}
+
+# Cutadapt(In_path = "../FASTQ/Project00",
+#          out_path = "~/ksy/project/Project00/Cutadapt",
+#          FWD = "AGAGTTTGATCCTGGCTCAG" , 
+#          REV = "ATTACCGCGGCTGCTGG", 
+#          QC = 20,
+#          cutadapt = "/home/ksy/cutadapt-venv/bin/cutadapt" )
+
+```
+
 
 
 
